@@ -1,0 +1,30 @@
+<table id="toc">
+<tr>
+<td>
+<ul>
+<li><a href="#first"><span class="tocnumber">1</span> <span class="toctext">first</span></a></li>
+<li><a href="#second"><span class="tocnumber">2</span> <span class="toctext">second</span></a></li>
+<li><a href="#third"><span class="tocnumber">3</span> <span class="toctext">third</span></a></li>
+<li><a href="#fourth"><span class="tocnumber">4</span> <span class="toctext">fourth</span></a></li>
+<li><a href="#fifth"><span class="tocnumber">5</span> <span class="toctext">fifth</span></a></li>
+<li><a href="#sixth"><span class="tocnumber">6</span> <span class="toctext">sixth</span></a></li>
+<li><a href="#seventh"><span class="tocnumber">7</span> <span class="toctext">seventh</span></a></li>
+</ul>
+</td>
+</tr>
+</table>
+<a name="first"></a><h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading8&amp;section=1">Edit</a>]</span><span>first</span></h2>
+<p>first</p>
+
+<a name="second"></a><h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading8&amp;section=2">Edit</a>]</span><span>second</span></h2>
+<p>second</p>
+<a name="third"></a><h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading8&amp;section=3">Edit</a>]</span><span>third</span></h2>
+<p>third</p>
+<a name="fourth"></a><h2 style="color: red"><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading8&amp;section=4">Edit</a>]</span><span>fourth</span></h2>
+<p>fourth</p>
+<a name="fifth"></a><h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading8&amp;section=5">Edit</a>]</span><span>fifth</span></h2>
+<p>fifth</p>
+<a name="sixth"></a><h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading8&amp;section=6">Edit</a>]</span><span>sixth</span></h2>
+<p>sixth</p>
+<a name="seventh"></a><h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading8&amp;section=7">Edit</a>]</span><span>seventh</span></h2>
+<p>seventh</p>
